sprint1 - setup build system & browserify

--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "browserify": "latest",
     "jasmine": "latest",
     "rimraf": "latest",
-    "jsdom": "latest"
+    "jsdom": "latest",
+    "mkdirp": "latest"
   },
   "scripts": {
     "clean": "rimraf dist/*",
 
     "prebuild": "npm run clean && npm run test",
     "build": "npm run build:scripts -s",
-    "build:scripts": "mkdir -p dist && browserify -e src/main.js -o dist/main.js",
+    "build:scripts": "mkdirp dist && browserify -e src/main.js -o dist/main.js",
 
     "test": "jasmine JASMINE_CONFIG_PATH=./test/spec/support/jasmine.json"
   }
