--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
 
     "test": "jasmine JASMINE_CONFIG_PATH=./test/spec/support/jasmine.json",
 
-    "correctDatasets" : "node ./test/scripts/correctDatasets.js"
+    "correctDatasets" : "node ./test/scripts/correctDatasets.js",
+    
+    "browserify:dataset1": "browserify -e test/html/dataset1/dataset1_main.js -o test/html/dataset1/dataset1_main_bundle.js"
   }
 }
