--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "rimraf": "latest",
     "jsdom": "latest",
     "mkdirp": "latest",
-    "file-save" : "latest"
+    "file-save" : "latest",
+    "uglifyjs" : "latest"
   },
   "scripts": {
     "clean": "rimraf dist/*",
@@ -17,6 +18,7 @@
     "prebuild": "npm run clean && npm run test",
     "build": "npm run build:scripts -s",
     "build:scripts": "mkdirp dist && browserify -e src/main.js -o dist/main.js",
+    "build:compressed": "mkdirp dist && browserify -e src/main.js | uglifyjs -c -m -o dist/main.js",
 
     "test": "jasmine JASMINE_CONFIG_PATH=./test/spec/support/jasmine.json",
 
