--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "mkdirp": "latest",
     "file-save" : "latest",
     "uglifyjs" : "latest",
-    "fs-extra" : "latest"
+    "fs-extra" : "latest",
+    "jshint" : "latest"
   },
   "scripts": {
     "clean": "rimraf dist/*",
+    "jshint": "jshint src",
 
     "prebuild": "npm run clean && npm run test",
     "build": "npm run build:scripts -s",
