--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "file-save" : "latest",
     "uglifyjs" : "latest",
     "fs-extra" : "latest",
-    "jshint" : "latest"
+    "jshint" : "latest",
+    "factor-bundle" : "latest"
   },
   "scripts": {
     "clean": "rimraf dist/*",
     "jshint": "jshint src",
 
-    "prebuild": "npm run clean && npm run test",
+
     "build": "npm run build:scripts -s",
     "build:scripts": "mkdirp dist && browserify -e src/layerjs.js -o dist/layerjs.js && npm run build:copywithversionnumber",
     "build:compressed": "mkdirp dist && browserify -e src/layerjs.js | uglifyjs -c -m -o dist/layerjs.js && npm run build:copywithversionnumber",
@@ -27,6 +28,13 @@
     "pretest": "npm run jshint",
     "test": "jasmine JASMINE_CONFIG_PATH=./test/spec/support/jasmine.json",
 
-    "correctDatasets" : "node ./test/scripts/correctDatasets.js"
+    "correctDatasets" : "node ./test/scripts/correctDatasets.js",
+
+
+    "presubStack" :  "npm run clean && browserify -r ./src/kern/kern.js  > dist/kern.js",
+    "subStack" :  "browserify -x ./src/kern/kern.js ./x.js  > dist/x.js",
+
+    "factorbundle":" npm run clean  && browserify -r --detect-globals ./src/layerjs.js > dist/layerjs.js",
+    "postfactorbundle":"browserify customimageview.js ./src/layerjs.js  -p [ factor-bundle -o dist/customimageview.js -o dist/bla.js ] -o dist/commonBla.js"
   }
 }
