FireFox problem Getting a script timeout when page is opening in FireFox

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "browserify": "latest",
     "jasmine": "latest",
+    "jasmine-expect" : "latest",
     "rimraf": "latest",
     "jsdom": "latest",
     "mkdirp": "latest",
