npm package.json: add script for running a debug node session for the test spec files

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 
     "pretest": "npm run jshint",
     "test": "jasmine JASMINE_CONFIG_PATH=./test/spec/support/jasmine.json",
+    "debugtest": "node debug `which jasmine` JASMINE_CONFIG_PATH=./test/spec/support/jasmine.json",
 
 
     "correctDatasets": "node ./test/scripts/correctDatasets.js",
