--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
     "globule" : "latest"
   },
   "scripts": {
-    "clean": "rimraf dist/*",
+    "clean": "rimraf build/* dist/*",
     "jshint": "jshint src",
 
     "postinstall": "webdriver-manager update --standalone && webdriver-manager update --ie",
 
     "prebuild": "npm run clean && npm run test",
     "build": "npm run build:scripts -s",
-    "build:scripts": "mkdirp dist && browserify -e src/layerjs.js -o dist/layerjs.js && npm run build:copywithversionnumber",
-    "build:compressed": "mkdirp dist && browserify -e src/layerjs.js | uglifyjs -c -m -o dist/layerjs.js && npm run build:copywithversionnumber",
-    "build:copywithversionnumber": "node ./scripts/copywithversionnumber.js",
+    "build:scripts": "mkdirp build && browserify -e src/layerjs.js -o build/layerjs.js && npm run package",
+    "build:compressed": "mkdirp build && browserify -e src/layerjs.js | uglifyjs -c -m -o build/layerjs.js && npm run package",
+    "package": "mkdirp ./dist/css && node ./scripts/copy.js ./build/layerjs.js ./dist/layerjs.js && node ./scripts/copy.js ./dist/layerjs.js ./dist/layerjs-$npm_package_version.js && node ./scripts/copy.js ./src/css/layerjs.css ./dist/css/layerjs.css && cd dist && zip layerjs-$npm_package_version.zip layerjs-$npm_package_version.js css/*",
 
     "pretest": "npm run jshint",
     "test": "jasmine JASMINE_CONFIG_PATH=./test/spec/support/jasmine.json",
@@ -40,7 +40,7 @@
     "webdriverManagerStart": "webdriver-manager start",
     "e2eTest": "./node_modules/.bin/protractor protractorconfig.js",
 
-    "prebuildSpecs" : "rimraf ./build/test/js/* && mkdirp ./build/test/js",
+    "prebuildSpecs" : "rimraf ./build/* && mkdirp ./build/test/js && node ./scripts/copy.js ./test/jasmine/lib ./build/test/lib && node ./scripts/copy.js ./test/SpecsInBrowser.html ./build/test/SpecsInBrowser.html",
     "buildSpecs": "node ./test/scripts/combinespecs.js && browserify ./build/test/js/globalspecs.js > ./build/test/js/specs.js"
   }
 }
