Problem with latest version of jsdom. The latest v9 does not support (DOMAttrModified, ...) events.  jsdom 8.5 still supports this so used this version.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "jasmine": "latest",
     "jasmine-expect": "latest",
     "rimraf": "latest",
-    "jsdom": "latest",
+    "jsdom": "8.5.0",
     "mkdirp": "latest",
     "file-save": "latest",
     "uglifyjs": "latest",
