--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "build:compressed": "mkdirp build && browserify -e src/layerjs.js | uglifyjs -c -m -o build/layerjs.js && npm run package",
     "package": "mkdirp ./dist/css && node ./scripts/copy.js ./build/layerjs.js ./dist/layerjs.js && node ./scripts/copy.js ./dist/layerjs.js ./dist/layerjs-$npm_package_version.js && node ./scripts/copy.js ./src/css/layerjs.css ./dist/css/layerjs.css && cd dist && zip layerjs-$npm_package_version.zip layerjs-$npm_package_version.js css/*",
 
-    "buildexamples": "for i in `find ./examples | grep layerjs.js` ; do rm $i;cp ./dist/layerjs.js $i;done;for i in `find ./examples | grep layerjs.css` ; do rm $i; cp ./dist/css/layerjs.css $i;done;",
+    "buildexamples": "for i in `find ./examples | grep layerjs.js` ; do rm $i;done;for i in `find ./examples | grep layerjs.css` ; do rm $i;done;for i in `ls -d ./examples/*/` ;do echo $i;cp ./dist/layerjs.js $i;cp ./dist/css/layerjs.css $i;done",
 
     "pretest": "npm run jshint",
 
