--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "perfcollector.js": "latest",
     "globule" : "latest",
     "xmlhttprequest": "latest",
-    "nock": "latest"
+    "nock": "latest",
+    "scripty" : "latest",
+    "uglifyjs" : "latest"
   },
   "scripts": {
     "clean": "rimraf build/* dist/*",
@@ -28,12 +30,12 @@
 
     "prebuild": "npm run clean && npm run test",
     "build": "npm run build:scripts -s",
-    "build:scripts": "mkdirp build && browserify -e src/layerjs.js -o build/layerjs.js && npm run package",
-    "build:compressed": "mkdirp build && browserify -e src/layerjs.js | uglifyjs -c -m -o build/layerjs.js && npm run package",
-    "package": "mkdirp ./dist/css && node ./scripts/copy.js ./build/layerjs.js ./dist/layerjs.js && node ./scripts/copy.js ./dist/layerjs.js ./dist/layerjs-$npm_package_version.js && node ./scripts/copy.js ./src/css/layerjs.css ./dist/css/layerjs.css && node ./scripts/copy.js ./src/css/layerjs.css ./dist/css/layerjs-$npm_package_version.css",
-    "zip": "cd dist && zip layerjs-$npm_package_version.zip layerjs-$npm_package_version.js css/*",
+    "build:scripts": "scripty && npm run package",
+    "build:compressed": "scripty && npm run package",
+    "package": "scripty",
+    "zip": "scripty",
 
-    "buildexamples": "for i in `find ./examples | grep layerjs.js` ; do rm $i;done;for i in `find ./examples | grep layerjs.css` ; do rm $i;done;for i in `ls -d ./examples/*/` ;do echo $i;cp ./dist/layerjs.js $i;cp ./dist/css/layerjs.css $i;done",
+    "buildexamples": "scripty",
 
     "pretest": "npm run jshint",
 
@@ -41,13 +43,10 @@
     "debugtest": "node debug `which jasmine` JASMINE_CONFIG_PATH=./test/spec/support/jasmine.json",
     "browsertest" : "browserify ./test/specs.js > ./test/jasmine/lib/specs.js",
 
-    "correctDatasets": "node ./test/scripts/correctDatasets.js",
-
     "webdriverManagerStart": "webdriver-manager start",
     "e2eTest": "./node_modules/.bin/protractor protractorconfig.js",
 
-    "prebuildSpecs" : "rimraf ./build/* && mkdirp ./build/test/js && node ./scripts/copy.js ./test/jasmine/lib ./build/test/lib && node ./scripts/copy.js ./test/SpecsInBrowser.html ./build/test/SpecsInBrowser.html",
-    "buildSpecs": "node ./test/scripts/combinespecs.js && browserify ./build/test/js/globalspecs.js > ./build/test/js/specs.js",
+    "buildSpecs": "scripty",
 
     "deployCDN": "scp ./dist/layerjs-$npm_package_version.js ./dist/css/layerjs-$npm_package_version.css www-data@layerjs.org:cdn/layerjs.org/libs/layerjs/"
   }
