package.json: added “e2e” script to startup e2e tests in one step (only works in mac, maybe on linux)

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 
     "webdriverManagerStart": "webdriver-manager start",
     "e2eTest": "./node_modules/.bin/protractor protractorconfig.js",
+    "e2e": "scripty",
 
     "buildSpecs": "scripty",
 
