--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "nock": "latest",
     "scripty" : "latest",
     "uglifyjs" : "latest",
+    "istanbul" : "latest",
+    "lite-server": "latest",
     "jasmine-reporters" : "latest",
     "jasmine-console-reporter" : "latest"
   },
@@ -30,7 +32,7 @@
 
     "postinstall": "webdriver-manager update --standalone && webdriver-manager update --ie",
 
-    "prebuild": "npm run clean",
+    "prebuild": "npm run clean && npm run test",
     "build": "npm run build:scripts -s",
     "build:scripts": "scripty && npm run package",
     "build:compressed": "scripty && npm run package",
