fixed build: prepending info to layerjs removed double \\ from strings

--- a/package.json
+++ b/package.json
@@ -4,27 +4,28 @@
   "author": "LayerJs",
   "version": "0.5.0",
   "dependencies": {
-    "browserify": "latest",
-    "jasmine": "latest",
-    "jasmine-expect": "latest",
-    "rimraf": "latest",
-    "jsdom": "8.5.0",
-    "mkdirp": "latest",
+    "browserify": "^13.3.0",
+    "concat": "^1.0.3",
     "file-save": "latest",
-    "uglifyjs": "latest",
     "fs-extra": "latest",
-    "jshint": "latest",
-    "protractor": "latest",
-    "perfcollector.js": "latest",
     "globule": "latest",
-    "xmlhttprequest": "latest",
-    "nock": "latest",
-    "scripty": "latest",
+    "google-closure-compiler": "latest",
     "istanbul": "latest",
-    "lite-server": "latest",
-    "jasmine-reporters": "latest",
+    "jasmine": "^2.9.0",
     "jasmine-console-reporter": "latest",
-    "google-closure-compiler": "latest"
+    "jasmine-expect": "latest",
+    "jasmine-reporters": "^2.3.0",
+    "jsdom": "8.5.0",
+    "jshint": "latest",
+    "lite-server": "latest",
+    "mkdirp": "latest",
+    "nock": "latest",
+    "perfcollector.js": "latest",
+    "protractor": "latest",
+    "rimraf": "latest",
+    "scripty": "latest",
+    "uglifyjs": "latest",
+    "xmlhttprequest": "latest"
   },
   "scripts": {
     "clean": "rimraf build/* dist/*",
