--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "e2eTest": "./node_modules/.bin/protractor protractorconfig.js",
     "e2e": "scripty",
     "buildSpecs": "scripty",
-    "deployCDN": "scp ./dist/layerjs-$npm_package_version.js ./dist/layerjs-$npm_package_version.css www-data@layerjs.org:cdn/layerjs.org/libs/layerjs/",
+    "deployCDN": "scp ./dist/layerjs-$npm_package_version.js ./dist/layerjs-$npm_package_version.min.js ./dist/layerjs-$npm_package_version.css www-data@layerjs.org:cdn/layerjs.org/libs/layerjs/",
     "deployExamples": "rsync -uaxv ./dist/examples/ www-data@layerjs.org:cdn/layerjs.org/examples/",
     "coverage": "istanbul cover --include-all-sources node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=./test/spec/support/jasmine.json"
   }
