added logging and increase performance

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "clean": "rimraf build/* dist/*",
     "jshint": "jshint src",
     "postinstall": "webdriver-manager update --standalone && webdriver-manager update --ie",
-    "prebuild": "npm run clean && npm run test",
+    "prebuild": "npm run clean",
     "build": "npm run build:scripts -s",
     "build:scripts": "scripty && npm run package",
     "build:compressed": "scripty",
