upgraded dev packages/dependencies; going to be 0.6.4

--- a/package.json
+++ b/package.json
@@ -2,29 +2,31 @@
   "name": "layerJS",
   "description": "layerJS, a lean javascript UX framework",
   "author": "LayerJs",
-  "version": "0.6.3",
+  "version": "0.6.4",
   "dependencies": {
     "browserify": "^13.3.0",
+    "chromedriver": "^80.0.1",
     "concat": "^1.0.3",
     "file-save": "latest",
-    "fs-extra": "latest",
-    "globule": "latest",
-    "google-closure-compiler": "latest",
+    "fs-extra": "^8.1.0",
+    "globule": "^1.3.0",
+    "google-closure-compiler": "^20200204.0.0",
     "istanbul": "latest",
     "jasmine": "^2.9.0",
     "jasmine-console-reporter": "latest",
-    "jasmine-expect": "latest",
-    "jasmine-reporters": "^2.3.0",
+    "jasmine-expect": "^4.0.3",
+    "jasmine-reporters": "^2.3.2",
     "jsdom": "8.5.0",
-    "jshint": "latest",
-    "lite-server": "latest",
-    "mkdirp": "latest",
-    "nock": "latest",
+    "jshint": "^2.11.0",
+    "lite-server": "^2.5.4",
+    "mkdirp": "^1.0.3",
+    "nock": "^11.8.2",
     "perfcollector.js": "latest",
-    "protractor": "latest",
-    "rimraf": "latest",
+    "protractor": "^5.4.3",
+    "rimraf": "^3.0.2",
     "scripty": "latest",
     "uglifyjs": "latest",
+    "webdriver": "^5.18.6",
     "xmlhttprequest": "latest"
   },
   "scripts": {
